fix: update styles for login page on mobile

--- a/src/pages/Login/style.module.scss
+++ b/src/pages/Login/style.module.scss
@@ -10,11 +10,21 @@
   background-color: $background;
 
   &__form {
+    @media screen and (max-width: 600px) {
+      padding: 12px;
+      width: 100%;
+    }
+  }
+  &__paper {
     display: flex;
     flex-direction: column;
     gap: 16px;
     padding: 48px;
     width: 448px;
+
+    @media screen and (max-width: 600px) {
+      width: 100%;
+    }
 
     &__input {
       color: blue;
